tests/lean/gen_fail.lean.expected.out
gen_fail.lean:6:2: error:invalid 'generalize' tactic, type error
type mismatch at application
  eq v
term
  v
has type
  vector ℕ n_1
but is expected to have type
  vector ℕ n
proof state:
n : ℕ,
v : vector ℕ n
⊢ v = v
gen_fail.lean:7:0: error: don't know how to synthesize placeholder
n : ℕ,
v : vector ℕ n
⊢ v = v
gen_fail.lean:7:0: error: failed to add declaration 'tst' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (n : ℕ) (v : …),
    ?M_1
