tests/lean/gen_fail.lean
import data.vector
open nat

theorem tst (n : nat) (v : vector nat n) : v = v :=
begin
  generalize n,
end
